--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -33,8 +33,8 @@ jobs:
           environment_name: ${{ secrets.EB_ENV_NAME }}
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           region: ${{ secrets.AWS_REGION }}
 
   
